# zanbergify

./: .gitignore  .gitmodules  Cargo.toml  package-lock.json  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  gemini-review-check.yml
flutter_razemify/: CHANGELOG.md  README.md  pubspec.yaml
flutter_razemify/android/: build.gradle  settings.gradle
flutter_razemify/android/src/main/: AndroidManifest.xml
flutter_razemify/android/src/main/kotlin/com/example/flutter_razemify/: FlutterRazemifyPlugin.kt
flutter_razemify/android/src/test/kotlin/com/example/flutter_razemify/: FlutterRazemifyPluginTest.kt
flutter_razemify/example/: README.md  pubspec.yaml
flutter_razemify/example/android/: gradle.properties
flutter_razemify/example/android/app/: build.gradle
flutter_razemify/example/android/app/src/main/: AndroidManifest.xml
flutter_razemify/example/integration_test/: plugin_integration_test.dart
flutter_razemify/example/lib/: main.dart
flutter_razemify/example/test/: widget_test.dart
flutter_razemify/lib/: flutter_razemify.dart
flutter_razemify/lib/src/: ffi_bindings.dart  models.dart  razemify.dart
flutter_razemify/rust/: Cargo.toml
flutter_razemify/rust/src/: lib.rs
flutter_zanbergify/: .metadata  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  pubspec.yaml
flutter_zanbergify/android/: build.gradle  cargokit_manual.gradle  settings.gradle
flutter_zanbergify/android/src/main/: AndroidManifest.xml
flutter_zanbergify/example/: README.md  pubspec.yaml
flutter_zanbergify/example/android/app/: build.gradle
flutter_zanbergify/example/android/app/src/main/: AndroidManifest.xml
flutter_zanbergify/example/integration_test/: plugin_integration_test.dart
flutter_zanbergify/example/test/: widget_test.dart
flutter_zanbergify/lib/: flutter_zanbergify.dart
flutter_zanbergify/lib/src/: ffi_bindings.dart  models.dart  zanbergify.dart
flutter_zanbergify/rust/: Cargo.toml
flutter_zanbergify/rust/src/: lib.rs
flutter_zanbergify/test/: flutter_zanbergify_method_channel_test.dart  flutter_zanbergify_test.dart
python_poc/src/zanbergify/: batch.py
razemify-cli/: Cargo.toml
razemify-cli/src/: main.rs
razemify-core/: Cargo.toml
razemify-core/src/: ffi.rs  flutter_ffi.rs  pipeline.rs  rembg.rs
razemify-wasm/: Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  ONNX_BACKGROUND_REMOVAL.md  ONNX_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  QUICKSTART_ONNX.md  README.md  TESTING_GUIDE.md  USAGE.md  wrangler.toml
razemify-wasm/src/: lib.rs  params.rs  processor.rs  utils.rs
razemify-wasm/www/: index.js
razemify-wasm/www/models/: README.md
rust/: .gitignore  Cargo.toml
rust/xtask/: Cargo.toml  README.md
rust/xtask/src/: cache.rs  download.rs  models.rs  verify.rs
rust/zanbergify-cli/src/: main.rs
rust/zanbergify-core/: Cargo.toml
rust/zanbergify-core/src/: clahe.rs  comic_pipeline.rs  edge_detect.rs  exif_orientation.rs  ffi.rs  lib.rs  pipeline.rs  posterize.rs  rembg.rs  sharpen.rs
rust/zanbergify-wasm/: .gitignore  BUNDLED_MODEL_SETUP.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_NOTES.md  ONNX_IMPLEMENTATION_COMPLETE.md  README.md  deploy-to-cloudflare.sh
rust/zanbergify-wasm/src/: lib.rs  params.rs  processor.rs
rust/zanbergify-wasm/www/: _headers  index.html  index.js
src/zanbergify/: __init__.py  batch.py  detailed.py  main.py  painted.py  posterize.py
workers/model-proxy/: worker.js  wrangler.toml
xtask/: Cargo.toml  README.md
xtask/src/: cache.rs  main.rs  models.rs  r2.rs  util.rs  wasm.rs  wasm_bundle.rs
zanbergify-cli/: Cargo.toml
zanbergify-core/: Cargo.toml
zanbergify-core/src/: edge_detect.rs  ffi.rs  flutter_ffi.rs  lib.rs  posterize.rs  sharpen.rs
zanbergify-wasm/: IMPLEMENTATION_SUMMARY.md  ONNX_BACKGROUND_REMOVAL.md  QUICKSTART.md  QUICKSTART_ONNX.md  TESTING_GUIDE.md  USAGE.md  WEBGPU_DIAGNOSTICS.md  build-and-deploy.sh  deploy-to-cloudflare.sh  wrangler.toml
zanbergify-wasm/src/: lib.rs
zanbergify-wasm/www/: index.html  index.js  zanbergify_wasm.js  zanbergify_wasm_bg.wasm
zanbergify-wasm/www/models/: README.md
(+4 files in other folders)
