[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "multipart", "json"] }
aws-sdk-s3 = "1.65"
aws-config = "1.5"
aws-credential-types = "1.2"
chrono = "0.4"
indicatif = "0.17"
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
dirs = "5.0"
tiny_http = "0.12"
hex = "0.4"
urlencoding = "2.1"
base64 = "0.22"
