[package]
name = "flutter_razemify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
razemify-core = { path = "../../razemify-core", default-features = false, features = ["flutter_ffi"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
