[package]
name = "zanbergify-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
image = "0.25"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "load-dynamic", "copy-dylibs", "download-binaries", "tls-rustls"], optional = true }
ndarray = "0.17"
kamadak-exif = "0.5"

[features]
default = ["rembg"]
rembg = ["dep:ort"]
